[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Stages/Stage1.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/BulletHellper/PatternMaker.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/music/apple time.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/sfx/skillcollect.ogg" type="AudioStream" id=5]
[ext_resource path="res://Theme/fonts/LibreBaskerville-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/gui/gui.png" type="Texture" id=7]
[ext_resource path="res://Theme/theme.tres" type="Theme" id=8]
[ext_resource path="res://Scripts/main.gd" type="Script" id=9]
[ext_resource path="res://Sounds/sfx/applecollect.ogg" type="AudioStream" id=10]
[ext_resource path="res://Theme/fonts/NotoSerifJP-Regular.otf" type="DynamicFontData" id=11]
[ext_resource path="res://Scripts/clear.gd" type="Script" id=12]
[ext_resource path="res://Sprites/gui/power/power1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/gui/powerframe.png" type="Texture" id=14]
[ext_resource path="res://Sprites/gui/power/power4.png" type="Texture" id=15]
[ext_resource path="res://Sprites/gui/life.png" type="Texture" id=16]
[ext_resource path="res://Sprites/gui/power/power3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/gui/power/power2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/gui/power/power5.png" type="Texture" id=19]
[ext_resource path="res://Sounds/sfx/clear.ogg" type="AudioStream" id=20]
[ext_resource path="res://Sounds/sfx/powerup.ogg" type="AudioStream" id=21]
[ext_resource path="res://Sounds/sfx/swoosh enemy.ogg" type="AudioStream" id=22]
[ext_resource path="res://Theme/fonts/invertScreen.tres" type="Shader" id=23]
[ext_resource path="res://Sounds/sfx/respawn.ogg" type="AudioStream" id=24]
[ext_resource path="res://Sounds/music/devastate_2.wav" type="AudioStream" id=25]

[sub_resource type="AnimatedTexture" id=16]
frames = 8
frame_0/texture = ExtResource( 13 )
frame_1/texture = ExtResource( 18 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 17 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 15 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 19 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 15 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 17 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 18 )
frame_7/delay_sec = 0.0

[sub_resource type="DynamicFont" id=21]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=19]
size = 30
outline_size = 3
outline_color = Color( 0.839216, 0.517647, 0.517647, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21, 342 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 471.5, 44.75 )

[sub_resource type="ShaderMaterial" id=18]
shader = ExtResource( 23 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 1406.16, 962.743 )

[node name="Scene" type="Node2D" groups=["rootScene"]]
scale = Vector2( 1.00131, 1.02208 )
script = ExtResource( 9 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 607.205, 618.347 )

[node name="GUI" type="CanvasLayer" parent="."]
physics_interpolation_mode = 1
process_priority = 10
layer = 50

[node name="Control" type="Control" parent="GUI"]
process_priority = 9
use_parent_material = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Loading" type="CanvasLayer" parent="GUI/Control"]
layer = 60

[node name="blacktint" type="CanvasLayer" parent="GUI/Control"]
layer = 45
visible = false

[node name="tint" type="ColorRect" parent="GUI/Control/blacktint"]
margin_right = 1728.0
margin_bottom = 1128.0
color = Color( 0, 0, 0, 0.572549 )

[node name="MainMenu" type="Control" parent="GUI/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="In-game" type="Control" parent="GUI/Control"]
use_parent_material = true
margin_right = 40.0
margin_bottom = 40.0

[node name="GameOver" type="Control" parent="GUI/Control/In-game"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Control/In-game/GameOver"]
margin_left = 352.0
margin_top = 472.0
margin_right = 864.0
margin_bottom = 784.0

[node name="Button" type="Button" parent="GUI/Control/In-game/GameOver/VBoxContainer"]
margin_right = 512.0
margin_bottom = 20.0

[node name="Overlay" type="Sprite" parent="GUI/Control/In-game"]
use_parent_material = true
position = Vector2( 728, 408 )
scale = Vector2( 5.08, 4.40165 )
texture = ExtResource( 7 )

[node name="Score" type="Control" parent="GUI/Control/In-game"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Apples" type="RichTextLabel" parent="GUI/Control/In-game/Score"]
process_priority = 9
margin_left = 1137.0
margin_top = 252.0
margin_right = 1313.0
margin_bottom = 292.0
theme = ExtResource( 8 )
text = " Apples:"
scroll_active = false

[node name="AppCounter" type="RichTextLabel" parent="GUI/Control/In-game/Score"]
process_priority = 9
margin_left = 1264.0
margin_top = 255.0
margin_right = 1440.0
margin_bottom = 295.0
theme = ExtResource( 8 )
text = "0"
scroll_active = false

[node name="Lives" type="RichTextLabel" parent="GUI/Control/In-game/Score"]
process_priority = 9
margin_left = 1136.0
margin_top = 128.0
margin_right = 1312.0
margin_bottom = 168.0
theme = ExtResource( 8 )
text = " Lives:"
scroll_active = false

[node name="CanvasLayer" type="CanvasLayer" parent="GUI/Control/In-game/Score/Lives"]
layer = 55

[node name="life1" type="Sprite" parent="GUI/Control/In-game/Score/Lives/CanvasLayer"]
position = Vector2( 1272, 147 )
scale = Vector2( 4, 4 )
texture = ExtResource( 16 )

[node name="life2" type="Sprite" parent="GUI/Control/In-game/Score/Lives/CanvasLayer"]
position = Vector2( 1328, 147 )
scale = Vector2( 4, 4 )
texture = ExtResource( 16 )

[node name="life3" type="Sprite" parent="GUI/Control/In-game/Score/Lives/CanvasLayer"]
position = Vector2( 1384, 147 )
scale = Vector2( 4, 4 )
texture = ExtResource( 16 )

[node name="Power" type="RichTextLabel" parent="GUI/Control/In-game/Score"]
margin_left = 1200.0
margin_top = 384.0
margin_right = 1368.0
margin_bottom = 424.0
theme = ExtResource( 8 )
text = " POWER"
scroll_active = false

[node name="frame" type="CanvasLayer" parent="GUI/Control/In-game/Score/Power"]
layer = 55

[node name="frame" type="Sprite" parent="GUI/Control/In-game/Score/Power/frame"]
position = Vector2( 1272, 504 )
scale = Vector2( 4, 4 )
texture = ExtResource( 14 )

[node name="power" type="CanvasLayer" parent="GUI/Control/In-game/Score/Power"]
layer = 54

[node name="TextureProgress" type="TextureProgress" parent="GUI/Control/In-game/Score/Power/power"]
margin_left = 1144.0
margin_top = 440.0
margin_right = 1208.0
margin_bottom = 472.0
rect_scale = Vector2( 4, 4 )
texture_progress = SubResource( 16 )

[node name="background" type="CanvasLayer" parent="GUI/Control/In-game/Score/Power"]
layer = 53

[node name="ColorRect" type="ColorRect" parent="GUI/Control/In-game/Score/Power/background"]
margin_left = 1144.0
margin_top = 448.0
margin_right = 1400.0
margin_bottom = 560.0
color = Color( 0, 0, 0, 0.329412 )

[node name="Skill" type="RichTextLabel" parent="GUI/Control/In-game/Score"]
margin_left = 1224.0
margin_top = 592.0
margin_right = 1336.0
margin_bottom = 648.0
theme = ExtResource( 8 )
text = "SKILL"
scroll_active = false

[node name="SkillName" type="RichTextLabel" parent="GUI/Control/In-game/Score"]
anchor_right = 0.486
margin_left = 1136.0
margin_top = 640.0
margin_right = 1404.56
margin_bottom = 720.0
theme = ExtResource( 8 )
custom_fonts/normal_font = SubResource( 21 )
scroll_active = false

[node name="game label" type="RichTextLabel" parent="GUI/Control/In-game"]
margin_left = 1120.0
margin_top = 8.0
margin_right = 1440.0
margin_bottom = 88.0
theme = ExtResource( 8 )
custom_fonts/normal_font = SubResource( 19 )
text = "Fruit Bat Adventure"
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/Control/In-game/game label"]
margin_left = 16.0
margin_top = 40.0
margin_right = 168.0
margin_bottom = 80.0
theme = ExtResource( 8 )
theme_type_variation = "small"
custom_fonts/normal_font = SubResource( 20 )
text = "ver 0.5"
scroll_active = false

[node name="chars" type="CanvasLayer" parent="."]
layer = 9
follow_viewport_enable = true

[node name="PatternVisualize" parent="chars" instance=ExtResource( 3 )]
visible = false
position = Vector2( 16, 8 )
__meta__ = {
"_editor_description_": "BulletHellper Pattern Generator"
}

[node name="player" parent="chars" instance=ExtResource( 1 )]
position = Vector2( 552, 392 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 720, 420 )
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="Boundary" type="StaticBody2D" parent="." groups=["Boundary"]]

[node name="Area2D" type="Area2D" parent="Boundary" groups=["Boundary"]]
scale = Vector2( 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary/Area2D" groups=["Boundary"]]
position = Vector2( 288, 424 )
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="Boundary" groups=["Boundary"]]
scale = Vector2( 1, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundary/Area2D2" groups=["Boundary"]]
position = Vector2( 968, 400 )
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="Area2D3" type="Area2D" parent="Boundary" groups=["Boundary"]]
scale = Vector2( 1, 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Boundary/Area2D3" groups=["Boundary"]]
position = Vector2( 679.11, 720.1 )
scale = Vector2( 1, 1 )
shape = SubResource( 5 )

[node name="Area2D4" type="Area2D" parent="Boundary" groups=["Boundary"]]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundary/Area2D4" groups=["Boundary"]]
position = Vector2( 727.048, 133.062 )
scale = Vector2( 1, 1 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary" groups=["Boundary"]]
position = Vector2( 288, 424 )
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundary" groups=["Boundary"]]
position = Vector2( 968, 400 )
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Boundary" groups=["Boundary"]]
position = Vector2( 679.109, 704.449 )
scale = Vector2( 1, 1 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundary" groups=["Boundary"]]
position = Vector2( 727.046, 140.89 )
scale = Vector2( 1, 1 )
shape = SubResource( 5 )

[node name="Music" type="Node" parent="."]

[node name="boss1" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 25 )
volume_db = -2.0

[node name="stage1" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 4 )
volume_db = -2.0
autoplay = true

[node name="SFX" type="Node" parent="Music"]

[node name="appleCollect" type="AudioStreamPlayer" parent="Music/SFX"]
stream = ExtResource( 10 )
volume_db = 7.0

[node name="clear" type="AudioStreamPlayer" parent="Music/SFX"]
stream = ExtResource( 20 )

[node name="powerLevelUp" type="AudioStreamPlayer" parent="Music/SFX"]
stream = ExtResource( 21 )

[node name="clearDeath" type="AudioStreamPlayer" parent="Music/SFX"]
stream = ExtResource( 22 )
volume_db = 4.0

[node name="respawn" type="AudioStreamPlayer" parent="Music/SFX"]
stream = ExtResource( 24 )

[node name="skillCollect" type="AudioStreamPlayer" parent="Music/SFX"]
stream = ExtResource( 5 )
volume_db = 5.0

[node name="Stage" type="CanvasLayer" parent="."]
layer = 9
follow_viewport_enable = true

[node name="Stage1" parent="Stage" instance=ExtResource( 2 )]

[node name="Invert" type="CanvasLayer" parent="."]
layer = 60
visible = false

[node name="ColorRect" type="ColorRect" parent="Invert"]
material = SubResource( 18 )
margin_left = -40.0524
margin_top = -112.429
margin_right = 1709.95
margin_bottom = 1077.57

[node name="BulletClear" type="StaticBody2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletClear"]
position = Vector2( 711.068, 457.89 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 17 )

[connection signal="powerSkillActivate" from="." to="chars/player" method="_on_Scene_powerSkillActivate"]
[connection signal="death" from="chars/player" to="." method="_on_player_death"]
[connection signal="changeStage" from="Stage/Stage1" to="." method="stageChange"]
